add febest and autoplus router

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ CLOUDINARY_CLOUD_NAME = 'dqzdnczkw'
 CLOUDINARY_API_KEY = '917516495884739'
 CLOUDINARY_API_SECRET = 'RJHfge3sc3C1uwWOy3swwKUnhMU'
 
-
+MONGODB_URL = 'mongodb://localhost:27017/foodie'
