--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
+    "mysql2": "^3.6.0",
     "nodemon": "^2.0.20"
   }
 }
