--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ebay-api": "^8.5.0",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
     "mysql2": "^3.6.0",
-    "nodemon": "^2.0.20"
+    "node-schedule": "^2.1.1",
+    "nodemon": "^2.0.20",
+    "readline": "^1.3.0"
   }
 }
