--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.0",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.0.3",
     "ebay-api": "^8.5.0",
     "express": "^4.18.2",
