--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.6.0",
     "node-schedule": "^2.1.1",
     "nodemon": "^2.0.20",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "socket.io": "^4.7.2"
   }
 }
